<resources>
    <string name="app_name">HomeAutomationAccessMobile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="error_field_required">Field cannot be empty</string>
...

    <string name="pref_header_general">General</string>
    <string name="pref_default_screen_title">Default screen</string>
    <string name="pref_default_screen_default">HOME</string>
    <string name="pref_default_screen_key">defaultScreen</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="login_form_title">Please login</string>

</resources>

